app/.kube/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-library
  labels:
    app: client-library
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: client-library
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-library
  labels:
    app: client-library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-library
  template:
    metadata:
      labels:
        app: client-library
    spec:
      containers:
        - name: client-library
          image: nitroshkin/client-library:1
          ports:
            - name: client-port
              containerPort: 3000
          imagePullPolicy: Always
