app/.kube/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.4
          args: ["start-dev"]
          ports:
            - name: keycloak-port
              containerPort: 8080
          imagePullPolicy: IfNotPresent
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data-claim
