app/.kube/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: libraryapp
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: libraryapp
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: service-gateway
               port:
                 name: http
